# mp-Finance-Manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yml
app/: manage.py
app/config/: settings.py
app/config/settings/: base.py  local.py  prod.py
