[project]
name = "mini-pj"
version = "0.1.0"
description = ""
authors = [
    {name = "hak1319",email = "gkr054@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "django-restframework (>=0.0.1,<0.0.2)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "drf-yasg (>=1.21.9,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.black.dependencies]
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.12"
black = "^25.1.0"

[tool.isort]
profile = "black"